--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1123,6 +1123,7 @@
     </style>
     
     {% block extra_css %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/ui-fixes.css' %}">
 </head>
 <body>
     <!-- Loading Spinner -->
