--- a/core/templates/dashboard/store/orders.html
+++ b/core/templates/dashboard/store/orders.html
@@ -80,7 +80,7 @@
                                             <div class="mt-2">
                                                 <strong>الإحداثيات:</strong>
                                                 <span dir="ltr">{{ order.address.latitude }}, {{ order.address.longitude }}</span>
-                                                <a class="btn btn-sm btn-outline-success ms-2" target="_blank" href="https://www.google.com/maps?q={{ order.address.latitude }},{{ order.address.longitude }}">افتح على خرائط Google</a>
+                                            <a class="btn btn-sm btn-outline-success ms-2" target="_blank" href="https://www.google.com/maps/search/?api=1&query={% if order.address.formatted_address %}{{ order.address.formatted_address|urlencode }}{% else %}{{ order.address.latitude }},{{ order.address.longitude }}{% endif %}">افتح على خرائط Google</a>
                                             </div>
                                             {% endif %}
                                         </div>
