--- a/core/templates/orders/detail.html
+++ b/core/templates/orders/detail.html
@@ -95,7 +95,7 @@
                     {% endif %}
                     {% if order.address.latitude and order.address.longitude %}
                     <p class="mb-0"><strong>الإحداثيات:</strong> <span dir="ltr">{{ order.address.latitude }}, {{ order.address.longitude }}</span></p>
-                    <a class="btn btn-sm btn-outline-success mt-2" target="_blank" href="https://www.google.com/maps?q={{ order.address.latitude }},{{ order.address.longitude }}">افتح على خرائط Google</a>
+                    <a class="btn btn-sm btn-outline-success mt-2" target="_blank" href="https://www.google.com/maps/search/?api=1&query={% if order.address.formatted_address %}{{ order.address.formatted_address|urlencode }}{% else %}{{ order.address.latitude }},{{ order.address.longitude }}{% endif %}">افتح على خرائط Google</a>
                     {% endif %}
                 </div>
             </div>
